--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
   "devDependencies": {
     "nuxt": "3.0.0-rc.1",
     "tailwindcss": "^3.0.24"
+  },
+  "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.0",
+    "date-fns": "^2.28.0"
   }
 }
