--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.0",
-    "date-fns": "^2.28.0"
+    "date-fns": "^2.28.0",
+    "js-cookie": "^3.0.1"
   }
 }
